@@ -1,18 +1,17 @@
 package uk.ac.ebi.atlas.model.experiment;
 
-import com.google.common.base.Function;
 import com.google.common.base.Strings;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
-import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import uk.ac.ebi.atlas.model.DescribesDataColumns;
-import uk.ac.ebi.atlas.model.experiment.Experiment;
 
-import javax.annotation.Nullable;
 import java.util.Collection;
+import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.toList;
+import static uk.ac.ebi.atlas.utils.GsonProvider.GSON;
 
 /*
 I'd prefer to be in experiment design but I need to do
@@ -20,9 +19,7 @@ experiment.propertiesForAssay(runOrAssay)
 One idea: pass in a function to the constructor of experiment design, made from the list of contrasts or assay groups, that does this instead
  */
 public class ExperimentDesignTable {
-
     private final Experiment<? extends DescribesDataColumns> experiment;
-    private final Gson gson = new Gson();
 
     public ExperimentDesignTable(Experiment<? extends DescribesDataColumns> experiment){
         this.experiment = experiment;
@@ -52,7 +49,7 @@ public class ExperimentDesignTable {
     JsonObject headerGroup(String name, Collection<String> members){
         JsonObject result = new JsonObject();
         result.addProperty("name", name);
-        result.add("values", gson.toJsonTree(members));
+        result.add("values", GSON.toJsonTree(members));
         return result;
     }
 
@@ -70,28 +67,20 @@ public class ExperimentDesignTable {
         result.add("properties", experiment.propertiesForAssay(runOrAssay));
 
         result.add("values", threeElementArray(
-                gson.toJsonTree(Strings.isNullOrEmpty(experiment.getExperimentDesign().getArrayDesign(runOrAssay))
-                        ? ImmutableList.of(runOrAssay) : ImmutableList.of(runOrAssay, experiment.getExperimentDesign().getArrayDesign(runOrAssay))
-                ),
-                gson.toJsonTree(FluentIterable.from(experiment.getExperimentDesign().getSampleHeaders())
-                        .transform(new Function<String, String>() {
-                            @Nullable
-                            @Override
-                            public String apply(@Nullable String sampleHeader) {
-                                return experiment.getExperimentDesign().getSampleCharacteristic(runOrAssay, sampleHeader).value();
-                            }
-                        }).toList()
-                ),
-                gson.toJsonTree(FluentIterable.from(experiment.getExperimentDesign().getFactorHeaders())
-                        .transform(new Function<String, String>() {
-                            @Nullable
-                            @Override
-                            public String apply(@Nullable String factorHeader) {
-                                return experiment.getExperimentDesign().getFactorValue(runOrAssay, factorHeader);
-                            }
-                        }).toList()
-                )
-        ));
+                GSON.toJsonTree(Strings.isNullOrEmpty(experiment.getExperimentDesign().getArrayDesign(runOrAssay)) ?
+                        ImmutableList.of(runOrAssay) :
+                        ImmutableList.of(
+                                runOrAssay,
+                                experiment.getExperimentDesign().getArrayDesign(runOrAssay))),
+                GSON.toJsonTree(
+                        Stream.of(experiment.getExperimentDesign().getSampleHeaders().toArray(new String[0]))
+                              .map(sampleHeader -> experiment.getExperimentDesign().getSampleCharacteristic(runOrAssay, sampleHeader).value())
+                              .collect(toList())),
+                GSON.toJsonTree(
+                        Stream.of(experiment.getExperimentDesign().getFactorHeaders().toArray(new String[0]))
+                              .map(factorHeader -> experiment.getExperimentDesign().getFactorValue(runOrAssay, factorHeader))
+                              .collect(toList()))));
+
         return result;
     }
 
